--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     </div>
 
     <div id="content">
-      <div id="logo_google"><img src="img/google_logo.png" alt="logo google" /></div>
-      <p id="france">France</p>
+      <div id="google_fr">
+        <div id="logo_google"><img src="img/google_logo.png" alt="logo google" /></div>
+        <p id="france">France</p>
+      </div>
 
       <form><input></form>
 
